--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,4 @@
-<div class="container container_navbar">
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default navbar-static-top" ">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -9,26 +8,86 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <div class="container">
-      <div class="row">
-        <div class="col-md-2"><a class="navbar-brand brand-style">Luna de vaca</a></div>
-        <div class="col-md-2"><%= image_tag "/lunadequeso.png", height: '160px' %></div>
+
+
+
+      <div class="container brand_description">
+    <ul>
+  <div class="col-xs-12 col-md-4 ">
+      <li class="brand_navbar">
+              <a  href="<%= root_path %>">
+              <br>
+              <img class="col-md-2"><a class="root" href="<%= root_path %>"> <%= image_tag "/lunadequeso.png", height: '140px' , widhth: '113px'%>
+              <br>
+              <span class="title"><strong>Luna de vaca</strong> </span>
+
+                  
+                </a>
+            </li>
+
+    
+  </div>  
+
+  <div class="col-md-8 list_navbar">         
+      <div class="col-xs-12 col-md-3">
+        <li>
+                <a href="#">
+                    <span class="title"><strong>Productores</strong> </span>
+                       <br>
+                    <span class="description">Quality not quantity, an adage we've lived by for 30 years now.</span>
+                </a>
+            </li>
+        
+      </div>  
+
+
+      <div class="col-xs-12 col-md-3">
+            <li>
+                <a href="#">
+                    <span class="title"><strong>Comprar</strong> </span>
+                       <br>
+                    <span class="description">Buy our award-winning wines online, read the tasting and technical notes.</span>
+                  </a>
+            </li> 
+        
+      </div>  
+
+
+      
+      <div class="col-xs-12 col-md-3">
+        <li>
+                <a href="#">
+                    <span class="title"><strong>Noticias</strong></span>
+                       <br>
+                    <span class="description">Latest happenings from the winery and our wine club.</span>
+                  </a>
+           </li>  
+        
+      </div>  
+
+      <div class="col-xs-12 col-md-3">
+         <li>
+                <a href="#">
+                    <span class="title"><strong>Visitanos</strong></span>
+                      <br>
+                    <span class="description">Our award winning native garden, artists residence and cellar door.</span>
+                  </a>
+           </li>
+      </div>  
+
+  </div>
+    
+</ul>     
       </div>
       </div>
+
+
     </div>
 
     </div>
+    <div class="collapse navbar-collapse size-top" id="bs-example-navbar-collapse-1">
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
-
-
-        <li class="active"><a href="#">Productores <span class="sr-only">(current)</span></a></li>
-        <li class="active"><a href="#">Comprar <span class="sr-only">(current)</span></a></li>
-        <li class="active"><a href="#">Noticias <span class="sr-only">(current)</span></a></li>
-        <li class="active"><a href="#">Visitanos <span class="sr-only">(current)</span></a></li>
-
+        <ul  class="nav navbar-nav">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Quesos<span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -43,21 +102,18 @@
             <li><a href="#">Sucursales</a></li>
           </ul>
         </li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Entrar</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
-          <ol class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ol>
-        </li>
+             <% if user_signed_in? %>
+             <li class="position_session"  > <a href="<%= destroy_user_session_path %>" data-method='delete'>
+             Salir
+             </a></li>
+             <% else %>
+                       <li  class="position_session" ><a href="<%= new_user_session_path %>"> Entrar </a></li>
+
+             <% end %>
+
+
+
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-</div>
