--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,8 +20,8 @@
 
 /*
 typography*/
-body{
-	font-family: 'Lato', sans-serif;
+body, li{
+font-family: 'Ubuntu Condensed', sans-serif;
 }
 /*typography ends*/
 
@@ -67,3 +67,13 @@ position: fixed !important;
 }
 }
 /*style nav_bar end*/
+
+/*
+Login*/
+
+.align-center {
+	margin-left: auto;
+	margin-right: auto;
+	width: 6em;
+	text-align: center;
+}
