agregando fb login

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -110,6 +110,10 @@
                        <li  class="position_session" ><a href="<%= new_user_session_path %>"> Entrar </a></li>
 
              <% end %>
+             <% if user_signed_in? %>
+ <li> <a href="#"> <%= link_to image_tag(current_user.image) user_products%> </a> </li>
+ <li> <a href="<%= destroy_user_session_path %>" data-method="delete">Salir </a></li>
+<% end %>
 
 
 
@@ -117,3 +121,5 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+
+
